grammars/FullParser.py
# Generated from ./grammars/FullParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class FullParser ( Parser ):

    grammarFileName = "FullParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "','", "'if'", "'elif'", "'else'", "':'", "'('", "')'", 
                     "<INVALID>", "<INVALID>", "'not'", "'while'", "'for'", 
                     "'range'", "'in'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "NEWLINE", "SPACES", 
                      "ASSIGNMENT_OP", "ARITHMETIC_OP", "LBRACKET", "RBRACKET", 
                      "COMMA", "IF", "ELIF", "ELSE", "COLON", "LPAREN", 
                      "RPAREN", "COMPARISON_OP", "LOGICAL_OP", "NOT_OP", 
                      "WHILE", "FOR", "RANGE", "IN", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT", "NUMBER", "BOOLEAN", "STRING", 
                      "ESC", "VARIABLE", "WS", "WS_SKIPPED" ]

    RULE_first_block = 0
    RULE_block = 1
    RULE_line = 2
    RULE_comment = 3
    RULE_if_block = 4
    RULE_elif_block = 5
    RULE_else_block = 6
    RULE_while_block = 7
    RULE_for_block = 8
    RULE_for_condition = 9
    RULE_iterable = 10
    RULE_stat = 11
    RULE_expr = 12
    RULE_assignment = 13
    RULE_expression = 14
    RULE_array = 15
    RULE_count = 16
    RULE_value = 17
    RULE_assignment_operator = 18
    RULE_operator = 19
    RULE_condition = 20
    RULE_comparison_condition = 21

    ruleNames =  [ "first_block", "block", "line", "comment", "if_block", 
                   "elif_block", "else_block", "while_block", "for_block", 
                   "for_condition", "iterable", "stat", "expr", "assignment", 
                   "expression", "array", "count", "value", "assignment_operator", 
                   "operator", "condition", "comparison_condition" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    NEWLINE=3
    SPACES=4
    ASSIGNMENT_OP=5
    ARITHMETIC_OP=6
    LBRACKET=7
    RBRACKET=8
    COMMA=9
    IF=10
    ELIF=11
    ELSE=12
    COLON=13
    LPAREN=14
    RPAREN=15
    COMPARISON_OP=16
    LOGICAL_OP=17
    NOT_OP=18
    WHILE=19
    FOR=20
    RANGE=21
    IN=22
    SINGLE_LINE_COMMENT=23
    MULTI_LINE_COMMENT=24
    NUMBER=25
    BOOLEAN=26
    STRING=27
    ESC=28
    VARIABLE=29
    WS=30
    WS_SKIPPED=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class First_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FullParser.LineContext)
            else:
                return self.getTypedRuleContext(FullParser.LineContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.NEWLINE)
            else:
                return self.getToken(FullParser.NEWLINE, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def getRuleIndex(self):
            return FullParser.RULE_first_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirst_block" ):
                listener.enterFirst_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirst_block" ):
                listener.exitFirst_block(self)




    def first_block(self):

        localctx = FullParser.First_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_first_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 45
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==FullParser.WS:
                        self.state = 44
                        self.match(FullParser.WS)


                    self.state = 47
                    self.line()
                    self.state = 49
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 48
                        self.match(FullParser.WS)


                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==FullParser.NEWLINE:
                        self.state = 51
                        self.match(FullParser.NEWLINE)
                        self.state = 56
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
             
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 62
                self.match(FullParser.WS)


            self.state = 65
            self.line()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 66
                self.match(FullParser.WS)


            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FullParser.NEWLINE:
                self.state = 69
                self.match(FullParser.NEWLINE)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(FullParser.INDENT, 0)

        def first_block(self):
            return self.getTypedRuleContext(FullParser.First_blockContext,0)


        def DEDENT(self):
            return self.getToken(FullParser.DEDENT, 0)

        def getRuleIndex(self):
            return FullParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = FullParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(FullParser.INDENT)
            self.state = 76
            self.first_block()
            self.state = 77
            self.match(FullParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(FullParser.AssignmentContext,0)


        def comment(self):
            return self.getTypedRuleContext(FullParser.CommentContext,0)


        def if_block(self):
            return self.getTypedRuleContext(FullParser.If_blockContext,0)


        def while_block(self):
            return self.getTypedRuleContext(FullParser.While_blockContext,0)


        def for_block(self):
            return self.getTypedRuleContext(FullParser.For_blockContext,0)


        def getRuleIndex(self):
            return FullParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = FullParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FullParser.VARIABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.assignment()
                pass
            elif token in [FullParser.SINGLE_LINE_COMMENT, FullParser.MULTI_LINE_COMMENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.comment()
                pass
            elif token in [FullParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.if_block()
                pass
            elif token in [FullParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.while_block()
                pass
            elif token in [FullParser.FOR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.for_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_LINE_COMMENT(self):
            return self.getToken(FullParser.SINGLE_LINE_COMMENT, 0)

        def MULTI_LINE_COMMENT(self):
            return self.getToken(FullParser.MULTI_LINE_COMMENT, 0)

        def getRuleIndex(self):
            return FullParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = FullParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not(_la==FullParser.SINGLE_LINE_COMMENT or _la==FullParser.MULTI_LINE_COMMENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(FullParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(FullParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(FullParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(FullParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(FullParser.BlockContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def elif_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FullParser.Elif_blockContext)
            else:
                return self.getTypedRuleContext(FullParser.Elif_blockContext,i)


        def else_block(self):
            return self.getTypedRuleContext(FullParser.Else_blockContext,0)


        def getRuleIndex(self):
            return FullParser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)




    def if_block(self):

        localctx = FullParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(FullParser.IF)
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 89
                self.match(FullParser.WS)


            self.state = 92
            self.condition()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 93
                self.match(FullParser.WS)


            self.state = 96
            self.match(FullParser.COLON)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 97
                self.match(FullParser.WS)


            self.state = 100
            self.match(FullParser.NEWLINE)
            self.state = 101
            self.block()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FullParser.ELIF:
                self.state = 102
                self.elif_block()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.ELSE:
                self.state = 108
                self.else_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Elif_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(FullParser.ELIF, 0)

        def condition(self):
            return self.getTypedRuleContext(FullParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(FullParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(FullParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(FullParser.BlockContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def getRuleIndex(self):
            return FullParser.RULE_elif_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif_block" ):
                listener.enterElif_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif_block" ):
                listener.exitElif_block(self)




    def elif_block(self):

        localctx = FullParser.Elif_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elif_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(FullParser.ELIF)
            self.state = 112
            self.condition()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 113
                self.match(FullParser.WS)


            self.state = 116
            self.match(FullParser.COLON)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 117
                self.match(FullParser.WS)


            self.state = 120
            self.match(FullParser.NEWLINE)
            self.state = 121
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Else_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(FullParser.ELSE, 0)

        def COLON(self):
            return self.getToken(FullParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(FullParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(FullParser.BlockContext,0)


        def WS(self):
            return self.getToken(FullParser.WS, 0)

        def getRuleIndex(self):
            return FullParser.RULE_else_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_block" ):
                listener.enterElse_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_block" ):
                listener.exitElse_block(self)




    def else_block(self):

        localctx = FullParser.Else_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_else_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(FullParser.ELSE)
            self.state = 124
            self.match(FullParser.COLON)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 125
                self.match(FullParser.WS)


            self.state = 128
            self.match(FullParser.NEWLINE)
            self.state = 129
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(FullParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(FullParser.ConditionContext,0)


        def COLON(self):
            return self.getToken(FullParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(FullParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(FullParser.BlockContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def getRuleIndex(self):
            return FullParser.RULE_while_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_block" ):
                listener.enterWhile_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_block" ):
                listener.exitWhile_block(self)




    def while_block(self):

        localctx = FullParser.While_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_while_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(FullParser.WHILE)
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 132
                self.match(FullParser.WS)


            self.state = 135
            self.condition()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 136
                self.match(FullParser.WS)


            self.state = 139
            self.match(FullParser.COLON)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 140
                self.match(FullParser.WS)


            self.state = 143
            self.match(FullParser.NEWLINE)
            self.state = 144
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(FullParser.FOR, 0)

        def for_condition(self):
            return self.getTypedRuleContext(FullParser.For_conditionContext,0)


        def COLON(self):
            return self.getToken(FullParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(FullParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(FullParser.BlockContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def getRuleIndex(self):
            return FullParser.RULE_for_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_block" ):
                listener.enterFor_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_block" ):
                listener.exitFor_block(self)




    def for_block(self):

        localctx = FullParser.For_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_for_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(FullParser.FOR)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 147
                self.match(FullParser.WS)


            self.state = 150
            self.for_condition()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 151
                self.match(FullParser.WS)


            self.state = 154
            self.match(FullParser.COLON)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 155
                self.match(FullParser.WS)


            self.state = 158
            self.match(FullParser.NEWLINE)
            self.state = 159
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(FullParser.VARIABLE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def IN(self):
            return self.getToken(FullParser.IN, 0)

        def iterable(self):
            return self.getTypedRuleContext(FullParser.IterableContext,0)


        def getRuleIndex(self):
            return FullParser.RULE_for_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_condition" ):
                listener.enterFor_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_condition" ):
                listener.exitFor_condition(self)




    def for_condition(self):

        localctx = FullParser.For_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_for_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(FullParser.VARIABLE)
            self.state = 162
            self.match(FullParser.WS)
            self.state = 163
            self.match(FullParser.IN)
            self.state = 164
            self.match(FullParser.WS)
            self.state = 165
            self.iterable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(FullParser.VARIABLE, 0)

        def array(self):
            return self.getTypedRuleContext(FullParser.ArrayContext,0)


        def RANGE(self):
            return self.getToken(FullParser.RANGE, 0)

        def LPAREN(self):
            return self.getToken(FullParser.LPAREN, 0)

        def count(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FullParser.CountContext)
            else:
                return self.getTypedRuleContext(FullParser.CountContext,i)


        def RPAREN(self):
            return self.getToken(FullParser.RPAREN, 0)

        def COMMA(self):
            return self.getToken(FullParser.COMMA, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def getRuleIndex(self):
            return FullParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterable" ):
                listener.exitIterable(self)




    def iterable(self):

        localctx = FullParser.IterableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_iterable)
        self._la = 0 # Token type
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FullParser.VARIABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(FullParser.VARIABLE)
                pass
            elif token in [FullParser.LBRACKET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.array()
                pass
            elif token in [FullParser.RANGE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.match(FullParser.RANGE)
                self.state = 170
                self.match(FullParser.LPAREN)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FullParser.WS:
                    self.state = 171
                    self.match(FullParser.WS)


                self.state = 174
                self.count()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FullParser.WS:
                    self.state = 175
                    self.match(FullParser.WS)


                self.state = 178
                self.match(FullParser.COMMA)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FullParser.WS:
                    self.state = 179
                    self.match(FullParser.WS)


                self.state = 182
                self.count()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FullParser.WS:
                    self.state = 183
                    self.match(FullParser.WS)


                0,2
                self.state = 187
                self.match(FullParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(FullParser.ExprContext,0)


        def getRuleIndex(self):
            return FullParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = FullParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def first_block(self):
            return self.getTypedRuleContext(FullParser.First_blockContext,0)


        def EOF(self):
            return self.getToken(FullParser.EOF, 0)

        def DEDENT(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.DEDENT)
            else:
                return self.getToken(FullParser.DEDENT, i)

        def getRuleIndex(self):
            return FullParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = FullParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.first_block()

            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==FullParser.DEDENT:
                self.state = 194
                self.match(FullParser.DEDENT)
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 200
            self.match(FullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(FullParser.VARIABLE, 0)

        def assignment_operator(self):
            return self.getTypedRuleContext(FullParser.Assignment_operatorContext,0)


        def expression(self):
            return self.getTypedRuleContext(FullParser.ExpressionContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(FullParser.WS)
            else:
                return self.getToken(FullParser.WS, i)

        def getRuleIndex(self):
            return FullParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = FullParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(FullParser.VARIABLE)
            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FullParser.WS:
                self.state = 203
                self.match(FullParser.WS)

